<resources>
    <string name="app_name">SmartFertigation</string>
    <string name="formulario_registro">Formulario de Registro</string>
    <string name="register_emai">Email</string>
    <string name="register_name">Nombre Completo</string>
    <string name="register_contrasena">Contraseña</string>
    <string name="register_confirmar_contrasena">Confirmar Contraseña</string>
    <string name="register_cel">Cel:</string>
    <string name="register_empresa">Empresa</string>
    <string name="register_ciudad">Ciudad</string>
    <string name="register_boton">Regístrate</string>
    <string name="bienvenido_smart_fertigation">Bienvenido a Smart Fertigation</string>
    <string name="login_email">Email</string>
    <string name="login_contrasena">Contraseña</string>
    <string name="login_iniciar_sesion">Iniciar Sesión</string>
    <string name="login_registrate">Regístrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_smart_fertigation_title">Smart Fertigation</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="menu_perfil">Perfil</string>
    <string name="smart_fertigation_title">SMART FERTIGATION</string>
    <string name="smart_fertigation_subtitle">Dosificador de fertilización edáfica</string>
    <string name="datos_cultivo_title">"Datos del Cultivo "</string>
    <string name="ciudad_datos_cultivo">Ciudad</string>
    <string name="tipo_cultivo_datos_cultivo">Tipo Cultivo</string>
    <string name="tipo_cultivo_edit_text">arroz</string>
    <string name="ciudad_cultivo_edit_text">Cali</string>
    <string name="metros_datos_cultivo">M2</string>
    <string name="metros_cuadrados_edit_text_number_decimal">200</string>
    <string name="altura_datos_cultivo">Altura Aprox</string>
    <string name="altura_datos_cultivo_edit_text_number_decimal">1000</string>
    <string name="cantidad_nutrientes_title">Ingresa las cantidades de nutrientes a \nsuplir (gr/planta)</string>
    <string name="n_no3_nutrientes">N-NO3</string>
    <string name="nutrientes_edit_text_number_decimal">10</string>
    <string name="n_nh4_nutrientes">N-NH4</string>
    <string name="p_nutrientes">P</string>
    <string name="k_nutrientes">K</string>
    <string name="ca_nutrientes">Ca</string>
    <string name="mg_nutrientes">Mg</string>
    <string name="s_nutrientes">S</string>
    <string name="calcular_nutrientes_button">Calcular</string>
</resources>