<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartfertigation.ui.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_newCalculationFragment"
            app:destination="@id/nav_newcalculation" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.smartfertigation.ui.main.ui.about.AboutFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.smartfertigation.ui.main.ui.profile.ProfileFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_newcalculation"
        android:name="com.example.smartfertigation.ui.newcalculation.NewCalculationFragment"
        android:label="fragment_new_calculation"
        tools:layout="@layout/fragment_new_calculation" />
</navigation>